// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users API POST should create a new user 1`] = `
{
  "status": 1,
  "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MSwiZW1haWwiOiJ0ZXN0QGV4YW1wbGUuY29tIiwibmFtZSI6IlRlc3QgVXNlciIsImlhdCI6MTY4MTQ3MzM4OCwiZXhwIjoxNjgxNDc2OTg4fQ.cbizIjxhThYWH6j3kZueJ2Ds4NgHdCXKgfNWrTpqeck",
}
`;

exports[`Users API POST should return a token for an existing user 1`] = `
{
  "status": 1,
  "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MiwiZW1haWwiOiJ0ZXN0QGV4YW1wbGUuY29tIiwiaWF0IjoxNjgxNDczMzg5LCJleHAiOjE2ODE0NzY5ODl9.PRtDmsT0ZVOsmlDMAWrfwyJAPzpzlKXOo9xXdNe4_Lw",
}
`;
